# cplusplus-bits

./: AUTHORS  LICENSE  Makefile.am  README  bits++.spec.in  configure.ac
bits++/: Makefile.am  go_test.sh  log4bits  matrix.cch  matrix.h  test.conf  test.cpp  test.log.conf  test_base.cpp  test_column.cpp  test_matrix.cpp  test_parse.cpp  test_periods.cpp  test_tsmat.cpp  tsidx.h  tsmat.cch  tsmat.h  tsparse.cch  tsparse.h
docs/: Doxyfile.in  Makefile.am
m4/: boost.m4
